# src/main/java/capitec/branch/appointment/appointment/infrastructure/controller/AppointmentsResponse.java
@@ -1,8 +1,10 @@
 package capitec.branch.appointment.appointment.infrastructure.controller;
 
+import capitec.branch.appointment.sharekernel.Pagination;
+
 import java.util.List;
 
 public record AppointmentsResponse(
         List<AppointmentResponse> appointments,
-        int totalCount
+        Pagination pagination
 ) {}
