# src/main/java/capitec/branch/appointment/staff/infrastructure/controller/StaffController.java
@@ -1,5 +1,6 @@
 package capitec.branch.appointment.staff.infrastructure.controller;
 
+import capitec.branch.appointment.sharekernel.Pagination;
 import capitec.branch.appointment.staff.app.AddStaffUseCase;
 import capitec.branch.appointment.staff.app.GetStaffInfoUseCase;
 import capitec.branch.appointment.staff.app.StaffDTO;
@@ -7,6 +8,7 @@ import capitec.branch.appointment.staff.app.UpdateStaffWorkStatusUseCase;
 import capitec.branch.appointment.staff.domain.Staff;
 import capitec.branch.appointment.staff.domain.StaffStatus;
 import jakarta.validation.Valid;
+import jakarta.validation.constraints.Min;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.http.ResponseEntity;
@@ -63,16 +65,37 @@ public class StaffController {
     public ResponseEntity<StaffListResponse> getStaffByBranch(
             @PathVariable("branchId") String branchId,
             @RequestParam(value = "status", required = false) String status,
-            @RequestHeader("Trace-Id") String traceId
+            @RequestHeader("Trace-Id") String traceId,
+            @RequestParam(value = "offset", defaultValue = "0", required = false)
+            @Min(value = 0, message = "Offset must be positive value") int offset,
+            @RequestParam(value = "limit", defaultValue = "10", required = false)
+            int limit
+
+
     ) {
         log.info("Getting staff for branch: {}, status: {}, traceId: {}", branchId, status, traceId);
         StaffStatus staffStatus = status != null ? StaffStatus.valueOf(status.toUpperCase()) :null;
 
         Set<String> staffUsernames = getStaffInfoUseCase.getStaffUsernames(branchId, staffStatus);
 
-        log.info("Found {} staff members for branch: {}, traceId: {}", staffUsernames.size(), branchId, traceId);
-
-        return ResponseEntity.ok(new StaffListResponse(staffUsernames, staffUsernames.size()));
+        int totalCount = staffUsernames.size();
+        log.info("Found {} staff members for branch: {}, traceId: {}", totalCount, branchId, traceId);
+        int totalPages = (int) Math.ceil((double) totalCount / offset);
+        boolean hasNext = offset < totalPages - 1;
+        boolean hasPrevious = offset > 0;
+        boolean isFirstPage = offset == 0;
+        boolean isLastPage = offset == totalPages - 1 || totalCount == 0;
+        Pagination pagination = new Pagination(
+                totalCount,
+                offset,
+                limit,
+                totalPages,
+                hasNext,
+                hasPrevious,
+                isFirstPage,
+                isLastPage
+        );
+        return ResponseEntity.ok(new StaffListResponse(staffUsernames, pagination));
     }
     /**
      * Update staff work status.
