# src/main/java/capitec/branch/appointment/staff/infrastructure/controller/StaffListResponse.java
@@ -1,8 +1,10 @@
 package capitec.branch.appointment.staff.infrastructure.controller;
 
+import capitec.branch.appointment.sharekernel.Pagination;
+
 import java.util.Set;
 
 public record StaffListResponse(
         Set<String> usernames,
-        int totalCount
+        Pagination pagination
 ) {}
